--- a/app/src/main/res/layout/activity_allchats.xml
+++ b/app/src/main/res/layout/activity_allchats.xml
@@ -8,28 +8,29 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:id="@+id/rel1"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
 
-        <TextView
-            android:id="@+id/tradeTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/logo"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp"
-            android:text="@string/allchats"
-            android:layout_marginStart="20dp"
-            android:textAlignment="center"
-            android:textColor="@color/main_colors_green"
-            android:textSize="25sp" />
+<!--        <TextView-->
+<!--            android:id="@+id/tradeTV"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@+id/logo"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:text="@string/allchats"-->
+<!--            android:layout_marginStart="20dp"-->
+<!--            android:textAlignment="center"-->
+<!--            android:textColor="@color/main_colors_green"-->
+<!--            android:textSize="25sp" />-->
 
-        <View
-            android:id="@+id/line"
-            android:layout_width="wrap_content"
-            android:layout_height="7dp"
-            android:layout_below="@+id/tradeTV"
-            android:layout_margin="15dp"
-            android:background="@color/main_colors_green" />
+<!--        <View-->
+<!--            android:id="@+id/line"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="7dp"-->
+<!--            android:layout_below="@+id/tradeTV"-->
+<!--            android:layout_margin="15dp"-->
+<!--            android:background="@color/main_colors_green" />-->
 
     </RelativeLayout>
 
@@ -53,8 +54,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="#404041"
-        app:menu="@menu/bottom_navigation">
+        android:background="@color/monochrome_gray_light"
+        app:menu="@menu/bottom_navigation"
+        app:itemIconTint="@drawable/selector">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
