--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -17,7 +17,7 @@
     <RelativeLayout
         android:id="@+id/rel1"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="100dp"
         android:layout_below="@id/toolbar"
         android:padding="8dp">
 
@@ -33,7 +33,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_person"
                 android:background="@color/monochrome_gray" />
 
         </androidx.cardview.widget.CardView>
@@ -113,8 +112,9 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
-            android:background="#2d2d2d"
-            app:menu="@menu/bottom_navigation">
+            android:background="@color/monochrome_gray_light"
+            app:menu="@menu/bottom_navigation"
+            app:itemIconTint="@drawable/selector">
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
 
