--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,7 +90,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:background="#2d2d2d"
+        android:background="@color/monochrome_gray_light"
         app:itemIconTint="@drawable/selector"
         app:menu="@menu/bottom_navigation" />
 
