--- a/app/src/main/res/layout/activity_others_profile.xml
+++ b/app/src/main/res/layout/activity_others_profile.xml
@@ -4,40 +4,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryDark"
-    android:paddingTop="5dp"
+    android:background="@color/monochrome_white"
     tools:context="com.example.travelapp.activities.OthersProfileActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        app:navigationIcon="?attr/homeAsUpIndicator"
+        android:background="@color/monochrome_gray_light" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:id="@+id/user_header_layout">
+        android:id="@+id/user_header_layout"
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="20dp">
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/myCardView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="20dp"
+            app:cardCornerRadius="50dp">
 
-        <ImageView
-            android:id="@+id/user_header_profile_image"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginEnd="5dp"
-            android:padding="10dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_person" />
+            <ImageView
+                android:id="@+id/user_header_profile_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:background="@color/main_colors_green" />
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/user_header_first_name"
-            android:text="firstname"
+            android:text=""
             android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginStart="15dp"
             android:textSize="20sp"
-            android:layout_toEndOf="@+id/user_header_profile_image"
-            android:layout_toRightOf="@+id/user_header_profile_image"
-            android:textColor="@color/colorPrimary"/>
+            android:layout_toEndOf="@id/myCardView"
+            android:textColor="@color/main_colors_blue"/>
 
         <TextView
-            android:text="lastname"
+            android:text=""
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/user_header_last_name"
@@ -46,61 +61,48 @@
             android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             android:textSize="20sp"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/main_colors_blue"/>
 
-        <TextView
-            android:id="@+id/user_header_user_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/user_header_first_name"
-            android:layout_marginBottom="10dp"
-            android:textSize="15sp"
-            android:layout_toEndOf="@+id/user_header_profile_image"
-            android:layout_toRightOf="@+id/user_header_profile_image"
-            android:textColor="@color/colorPrimary" />
-
-        <TextView
-            android:id="@+id/user_header_user_state_info"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/user_header_user_email"
-            android:layout_toEndOf="@+id/user_header_profile_image"
-            android:layout_toRightOf="@+id/user_header_profile_image"
-            android:textColor="@color/colorPrimaryDark" />
-
-        <TextView
-            android:id="@+id/user_header_user_phone_number"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/user_header_user_state_info"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="8dp"
-            android:layout_toEndOf="@+id/user_header_profile_image"
-            android:layout_toRightOf="@+id/user_header_profile_image"
-            android:textColor="@color/colorPrimaryDark" />
-
-        <Button
+        <ImageView
             android:id="@+id/init_chat"
-            android:layout_width="90dp"
-            android:layout_height="40dp"
-            android:layout_below="@id/user_header_user_state_info"
-            android:layout_marginStart="40dp"
-            android:layout_marginLeft="40dp"
-            android:layout_toEndOf="@id/user_header_user_phone_number"
-            android:layout_toRightOf="@id/user_header_user_phone_number"
-            android:text="message" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/user_header_last_name"
+            android:layout_toEndOf="@id/myCardView"
+            android:layout_marginStart="15dp"
+            android:background="@drawable/ic_chat"/>
 
     </RelativeLayout>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_others"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/user_header_layout"
+        android:layout_above="@+id/bottom_nav"
+        android:layout_marginTop="10dp"
         android:padding="5dp">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <TextView
+            android:id="@+id/travel_history_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/travel_stories"
+            android:textSize="20sp"
+            android:textColor="@color/main_colors_blue"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:paddingTop="20dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_others"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/travel_history_title"
+            android:padding="5dp">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/fragment_container_others"
@@ -114,7 +116,7 @@
         android:layout_height="50dp"
         app:itemIconTint="@drawable/selector"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/monochrome_gray_light"
         app:menu="@menu/bottom_navigation" />
 
 </RelativeLayout>
