--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,34 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".activities.ProfileActivity">
 
-<!--    <RelativeLayout-->
-<!--        android:id="@+id/rel1"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tradeTV"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_centerHorizontal="true"-->
-<!--            android:paddingTop="10dp"-->
-<!--            android:paddingBottom="20dp"-->
-<!--            android:text="@string/user_profile"-->
-<!--            android:textAlignment="center"-->
-<!--            android:paddingLeft="10dp"-->
-<!--            android:textColor="@color/colorPrimaryLight"-->
-<!--            android:textSize="25sp" />-->
-
-        <!--<ImageView-->
-            <!--android:id="@+id/line"-->
-            <!--android:layout_width="240dp"-->
-            <!--android:layout_height="5dp"-->
-            <!--android:layout_below="@+id/tradeTV"-->
-            <!--android:layout_margin="10dp"-->
-            <!--android:background="@drawable/lineblue" />-->
-
-<!--    </RelativeLayout>-->
-
     <TextView
         android:id="@+id/logout"
         android:layout_width="wrap_content"
@@ -65,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_person"
+                android:src="@drawable/ic_person_black_24dp"
                 android:background="@color/monochrome_gray"/>
 
         </androidx.cardview.widget.CardView>
@@ -77,61 +49,8 @@
             android:layout_margin="15dp"
             android:textSize="20sp"
             android:layout_toEndOf="@+id/myCardView"
-            android:textColor="@color/monochrome_black"
+            android:textColor="@color/main_colors_blue"
             android:layout_centerVertical="true" />
-
-<!--        <TextView-->
-<!--            android:id="@+id/userAddLastName"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginLeft="5dp"-->
-<!--            android:layout_marginTop="15dp"-->
-<!--            android:textSize="20sp"-->
-<!--            android:layout_marginBottom="10dp"-->
-<!--            android:layout_toEndOf="@+id/userAddFirstName"-->
-<!--            android:layout_toRightOf="@+id/userAddFirstName"-->
-<!--            android:textColor="@color/monochrome_gray_dark" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/ShowEmail"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@+id/userAddFirstName"-->
-<!--            android:layout_marginBottom="10dp"-->
-<!--            android:textSize="15sp"-->
-<!--            android:layout_toEndOf="@+id/userAddPhoto"-->
-<!--            android:layout_toRightOf="@+id/userAddPhoto"-->
-<!--            android:textColor="@color/colorPrimary" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/userAddStateInfo"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@+id/ShowEmail"-->
-<!--            android:layout_marginBottom="10dp"-->
-<!--            android:layout_toEndOf="@+id/userAddPhoto"-->
-<!--            android:layout_toRightOf="@+id/userAddPhoto"-->
-<!--            android:textColor="@color/colorPrimary" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/userAddPhoneNum"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@+id/userAddStateInfo"-->
-<!--            android:layout_marginBottom="10dp"-->
-<!--            android:layout_toEndOf="@+id/userAddPhoto"-->
-<!--            android:layout_toRightOf="@+id/userAddPhoto"-->
-<!--            android:textColor="@color/colorPrimary" />-->
-
-
-<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--            android:id="@+id/logoutBtn"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentRight="true"-->
-<!--            android:layout_centerInParent="true"-->
-<!--            android:layout_marginLeft="15dp"-->
-<!--            android:src="@drawable/ic_wlogoutt" />-->
 
     </RelativeLayout>
 
@@ -182,8 +101,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/your_travel_stories"
-            android:textSize="22sp"
-            android:textColor="@color/monochrome_gray_dark"
+            android:textSize="20sp"
+            android:textColor="@color/main_colors_blue"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
             android:paddingTop="20dp"/>
@@ -219,7 +138,6 @@
 
         </RelativeLayout>
 
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
@@ -241,7 +159,7 @@
         android:layout_height="50dp"
         app:itemIconTint="@drawable/selector"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/monochrome_gray_light"
         app:menu="@menu/bottom_navigation" />
 
 </RelativeLayout>
