--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,39 +4,83 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    tools:context=".activities.SearchActivity"
-    >
+    android:background="@color/monochrome_white"
+    tools:context=".activities.SearchActivity">
 
+    <RelativeLayout
+        android:id="@+id/search_input"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <EditText
+        <EditText
             android:id="@+id/search_box"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_margin="20dp"
+            android:padding="10dp"
             android:hint="@string/search_hint"
-            android:textColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary"
-            android:background="@drawable/edittextline"></EditText>
+            android:textColor="@color/monochrome_black"
+            android:textColorHint="@color/monochrome_gray_dark"
+            android:background="@drawable/search_box" />
 
-    <ImageButton
+        <ImageButton
             android:id="@+id/search_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_alignRight="@id/search_box"
-            android:background="@color/colorPrimaryDark"
-            app:srcCompat="@drawable/ic_search_navigation" />
+            android:layout_alignEnd="@id/search_box"
+            android:layout_marginEnd="10dp"
+            app:srcCompat="@drawable/ic_search_navigation"
+            android:background="#00000000"
+            android:layout_centerVertical="true"/>
+
+    </RelativeLayout>
 
     <ScrollView android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/search_box"
+        android:layout_below="@id/search_input"
         android:layout_above="@id/bottom_nav">
-        <RelativeLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:nestedScrollingEnabled="false">
 
+            <RelativeLayout
+                android:id="@+id/column_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:visibility="invisible">
+
+                <TextView
+                    android:id="@+id/column_user_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginEnd="50dp"
+                    android:text="@string/users"
+                    android:textAllCaps="true"
+                    android:layout_centerInParent="true"/>
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_toStartOf="@id/column_user_text"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
+                    android:background="@color/main_colors_orange" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_toEndOf="@id/column_user_text"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
+                    android:background="@color/main_colors_orange" />
+
+            </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/user_result_list"
@@ -44,14 +88,48 @@
         android:layout_height="wrap_content"
         android:nestedScrollingEnabled="false"/>
 
+            <RelativeLayout
+                android:id="@+id/column_trips"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:visibility="invisible">
+
+                <TextView
+                    android:id="@+id/column_trips_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginEnd="50dp"
+                    android:text="@string/travel_stories"
+                    android:textAllCaps="true"
+                    android:layout_centerInParent="true"/>
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_toStartOf="@id/column_trips_text"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
+                    android:background="@color/main_colors_orange" />
+
+                <View
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_toEndOf="@id/column_trips_text"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
+                    android:background="@color/main_colors_orange" />
+
+            </RelativeLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/trip_result_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/user_result_list"
         android:nestedScrollingEnabled="false"/>
   
-      </RelativeLayout>
+      </LinearLayout>
 
   </ScrollView>
   
@@ -59,8 +137,7 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_nav"
-        android:layout_marginBottom="5dp" />
+        android:layout_above="@+id/bottom_nav" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
@@ -68,7 +145,7 @@
         android:layout_height="50dp"
         app:itemIconTint="@drawable/selector"
         android:layout_alignParentBottom="true"
-        android:background="#2d2d2d"
+        android:background="@color/monochrome_gray_light"
         app:menu="@menu/bottom_navigation" />
 
 </RelativeLayout>
