--- a/app/src/main/res/layout/chat_left.xml
+++ b/app/src/main/res/layout/chat_left.xml
@@ -5,19 +5,28 @@
     android:layout_height="wrap_content"
     android:layout_margin="20dp">
 
-    <ImageView
-        android:id="@+id/chatIcon"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/myCardView"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginRight="15dp"
-        app:srcCompat="@drawable/ic_add_a_photo_blue_24dp" />
+        android:layout_marginEnd="15dp"
+        app:cardCornerRadius="25dp">
+
+        <ImageView
+            android:id="@+id/chatIcon"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:background="@color/monochrome_gray" />
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/messageTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/chatIcon"
-        android:background="#5497A7"
+        android:layout_toEndOf="@id/myCardView"
+        android:background="@drawable/button_bg_round_corner_green"
         android:padding="15dp"
         android:text="Users Message"
         android:textColor="@color/white"
@@ -27,7 +36,7 @@
         android:id="@+id/seenTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/chatIcon"
+        android:layout_below="@id/myCardView"
         android:layout_alignParentRight="true"
         android:gravity="end"
         android:text="delivered"
