--- a/app/src/main/res/layout/list_users.xml
+++ b/app/src/main/res/layout/list_users.xml
@@ -1,43 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="15dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/profile_image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/ic_person_black_24dp"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/myCardView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:cardCornerRadius="25dp">
+
+        <ImageView
+            android:id="@+id/profile_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@color/main_colors_green"/>
+
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_toEndOf="@+id/profile_image"
+        android:layout_marginStart="10dp"
+        android:layout_toEndOf="@id/myCardView"
         android:text="Username"
-        android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textColor="@color/monochrome_black"
+        android:textSize="16sp"
+        android:layout_centerVertical="true"/>
 
-    <TextView
-        android:id="@+id/email_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/name_text"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="5dp"
-        android:text="Status Info"
-        android:layout_toEndOf="@+id/profile_image"
-        android:textColor="@color/white"
-        android:textSize="14sp" />
+<!--    <TextView-->
+<!--        android:id="@+id/email_text"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/name_text"-->
+<!--        android:layout_marginLeft="20dp"-->
+<!--        android:layout_marginRight="30dp"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:text="Status Info"-->
+<!--        android:layout_toEndOf="@+id/profile_image"-->
+<!--        android:textColor="@color/white"-->
+<!--        android:textSize="14sp" />-->
 
 </RelativeLayout>
