--- a/app/src/main/res/layout/row_users.xml
+++ b/app/src/main/res/layout/row_users.xml
@@ -30,7 +30,6 @@
         android:id="@+id/userListName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/logo"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"
         android:layout_toEndOf="@+id/myCardView"
@@ -40,13 +39,21 @@
 
 
 
-    <ImageView
-        android:id="@+id/line"
+<!--    <ImageView-->
+<!--        android:id="@+id/line"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="2dp"-->
+<!--        android:layout_below="@+id/myCardView"-->
+<!--        android:layout_margin="13dp"-->
+<!--        android:background="@drawable/wline" />-->
+
+    <View
         android:layout_width="wrap_content"
         android:layout_height="2dp"
-        android:layout_below="@+id/myCardView"
-        android:layout_margin="13dp"
-        android:background="@drawable/wline" />
+        android:layout_below="@id/myCardView"
+        android:layout_toEndOf="@id/myCardView"
+        android:layout_margin="5dp"
+        android:background="@color/monochrome_gray_light" />
 
 
 </RelativeLayout>
