--- a/app/src/main/res/layout/activity_allchats.xml
+++ b/app/src/main/res/layout/activity_allchats.xml
@@ -11,6 +11,17 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="10dp"
+            android:text="@string/allchats"
+            android:textAlignment="center"
+            android:textColor="@color/main_colors_green"
+            android:textStyle="bold"
+            android:textSize="25sp" />
+
 <!--        <TextView-->
 <!--            android:id="@+id/tradeTV"-->
 <!--            android:layout_width="wrap_content"-->
