--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -59,11 +59,11 @@
         <EditText
             android:id="@+id/firstName"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="35dp"
+            android:layout_marginBottom="15dp"
             android:background="@drawable/edittext_box"
             android:padding="8dp"
             android:textColor="@color/monochrome_gray_dark"
@@ -80,11 +80,11 @@
         <EditText
             android:id="@+id/lastName"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="35dp"
+            android:layout_marginBottom="15dp"
             android:background="@drawable/edittext_box"
             android:padding="8dp"
             android:textColor="@color/monochrome_gray_dark"
@@ -101,11 +101,11 @@
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="35dp"
+            android:layout_marginBottom="15dp"
             android:background="@drawable/edittext_box"
             android:padding="8dp"
             android:textColor="@color/monochrome_gray_dark"
@@ -125,11 +125,12 @@
             android:layout_above="@+id/signupBtn"
             android:hint="no less than 10 characters"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
+            android:inputType="textPassword"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="35dp"
+            android:layout_marginBottom="15dp"
             android:background="@drawable/edittext_box"
             android:padding="8dp"
             android:textColor="@color/monochrome_gray_dark"
