--- a/app/src/main/res/layout/activity_trip_planning.xml
+++ b/app/src/main/res/layout/activity_trip_planning.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,37 +7,43 @@
     tools:context=".activities.TripPlanningActivity">
 
     <RelativeLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        app:navigationIcon="?attr/homeAsUpIndicator"
-        android:background="@color/monochrome_gray_light" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            app:navigationIcon="?attr/homeAsUpIndicator"
+            android:background="@color/monochrome_gray_light" />
 
         <TextView
             android:id="@+id/plantriptitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:layout_below="@id/toolbar"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:text="Plan a Trip"
             android:textColor="@color/main_colors_green"
             android:textStyle="bold"
             android:textSize="25sp" />
 
+    </RelativeLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/header">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/plantriptitle"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="25dp"
             android:layout_marginBottom="30dp"
@@ -535,6 +541,6 @@
 
     </RelativeLayout>
 
-    </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
 
-</ScrollView>
+</RelativeLayout>
